@@ -70,8 +70,6 @@ GXX = @GXX@
 LD = @LD@
 CONFIGSUFFIX = @CONFIGSUFFIX@
 MAKEINFO_PROGRAM = @MAKEINFO@
-SPLITTING_MAKEINFO = @SPLITTING_MAKEINFO@
-MAKEINFO_VERSION = @MAKEINFO_VERSION@
 ICFLAGS = @ICFLAGS@
 ILDFLAGS = @ILDFLAGS@
 TFM_PATH = @TFM_PATH@
