@@ -1,3 +1,10 @@
+2005-03-14  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* make/ly-rules.make ($(outdir)/%.nexi): Remove old makeinfo
+	compatibility.
+
+	* Documentation/user/GNUmakefile: Remove splitting-makeinfo.
+
 2005-03-13  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* input/regression/page-breaks.ly: Fix and update.
